Fixing tests and Mockito Java 21